@@ -37,6 +37,8 @@ Release 1.1 Start 27/02/2021
 20. minisvc: removed mixed use of space and tab
 - 12/05/2021
 21. moved pathexec_run, pathexec_env to libqmail
+- 16/05/2021
+22. minisvc: fixed TMPDIR creation
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
